--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.13.0",
     "use-debounce": "^10.0.2",
     "zod": "^3.23.8"
   },
